# kata-python

./: .gitignore  README.md  docker-compose.yaml  setup.cfg
.docker/python/: Dockerfile
src/Acme/Tests/: AcmeTest.py
