# https://setuptools.pypa.io/en/latest/userguide/quickstart.html

[metadata]
name = acme
version = 0.1.0
description = kata acme
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kata
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7,<3.0
install_requires =

[options.packages.find]
where = src
exclude =
    **.Tests
